crud/public/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    position: relative;
    min-height: 100vh;
    background-color: #adabab;
    font-size: 1rem;
    line-height: 1.3;
}

h1, h2, h3, h4 {
    margin: 15px 0;
    line-height: 1.5;
}

form {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}
input {
    padding: 3px;
    margin: 5px 0;
}
input[type=submit] {
    margin-left: 50px;
    padding: 5px;
    border: 0.5px solid black;
    border-radius: 5px;
}
input[type=submit]:hover {
    cursor: pointer;
}
.list input[type=submit] {
    margin: 0 0 10px 5px;
}

#btn-cancel {
    margin-left: 5%;
}
#btn-cancel > a {
    text-decoration: none;
    color: black;
}

hr {
    margin: 15px 0;
    border: 1px solid black;
}

section {
    padding: 0px 20px;
    margin-bottom: 20px;
}

section h1 {
    text-align: center;
}

div.list {
    border: 1px solid black;
    padding: 20px;
}

ul {
    display: grid;
    grid-template-columns: repeat(2, minmax(auto, 50%));
    gap: 5px 40px;
    list-style-type: none;
}

ul > form {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: baseline;
}

div.btns {
    width: 30%;
}


button {
    padding: 5px;
    margin: 0 0 10px 5px;
    border: 0.5px solid black;
    border-radius: 5px;
}
button:hover {
    cursor: pointer;
}


header, footer {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100px;
    width: 100%;
    background-color: blueviolet;
    color: white;
}
footer {
    position: absolute;
    bottom: 0;
}

@media (min-width: 1120px) {
    ul {
        grid-template-columns: repeat(3, minmax(auto, 32.5%));
    }

    div.btns {
        width: 50%;
    }
    
    #btn-cancel {
        margin-left: 2.5%;
    }
}

